--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 8080
+
+spring:
+  datasource:
+    url: jdbc:mysql://192.168.64.128:3306/personal_finance_manager?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: validate
+    database: mysql
+    show-sql: true
