--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.64.128:3306/personal_finance_manager?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://40.115.138.168:3306/personal_finance_manager?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: root
+    password: manager
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
