--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://40.115.138.168:3306/personal_finance_manager?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/personal_finance_manager?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: manager
     driver-class-name: com.mysql.cj.jdbc.Driver
