--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
 	</properties>
 	
 	<dependencies>
+<!--		<dependency> <groupId>org.powermock</groupId>-->
+<!--			<artifactId>powermock-module-junit4</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.powermock</groupId>-->
+<!--			<artifactId>powermock-api-mockito</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+		
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
@@ -30,11 +40,13 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
