--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,17 @@
 	</properties>
 	
 	<dependencies>
-<!--		<dependency> <groupId>org.powermock</groupId>-->
-<!--			<artifactId>powermock-module-junit4</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.powermock</groupId>-->
-<!--			<artifactId>powermock-api-mockito</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+		<dependency> <groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>1.5.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>1.5.6</version>
+			<scope>test</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>io.springfox</groupId>
